--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ VITE_AUTH0_DOMAIN=dorplaut.us.auth0.com
 VITE_AUTH0_CLIENT_ID=WAcwhQsfywKYXFUyHTRtTT6o3tQ63iPM
 VITE_AUTH0_AUDIENCE=https://www.BlackSachbakApi.com
 VITE_SERVER_URL=http://localhost:6060
+VITE_PAYPAL_CLIENT_ID=AYu5Yut0D_bqB4dkX7t4G-K7SW1OxP3YTaU-1ONSVKyB6XMkiN_338whbmmoYzA7XCH8WlOagnCfjuCV
+ 
+ 
