--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.1",
     "react-router-hash-link": "^2.4.3",
+    "react-scroll-parallax": "^3.3.2",
     "react-spinners": "^0.13.6"
   },
   "devDependencies": {
