--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.12.0",
+    "@emailjs/browser": "^3.10.0",
     "@paypal/react-paypal-js": "^7.8.1",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
